# course-work-parallel-computing

./: .gitignore  CMakeLists.txt  README.md  main.cpp
clients/: python_client.py  web_client.html
src/: FileManager.cpp  FileManager.h  Invertedndex.cpp  Invertedndex.h  SegmentedHashMap.cpp  SegmentedHashMap.h  Server.cpp  Server.h  TaskQueue.cpp  TaskQueue.h  ThreadPool.cpp  ThreadPool.h
